# poc-dc

./: .gitignore  README.md  channel-sender-compose.yml  dc-router-docker-compose.yml  diesel-example.yml  docker-compose.yml  editor.css  email-response-through-webhook  email.html  event-store-docker-compose.yml  index.html  inline-editor.css  inline-editor.html  make-pdf-docker-compose.yml  postgre-compose.yml  postgre-compose.yml.yml  postgres-compose.yml  sample.html  sms-response-through-webhook  sp-docker-compose.yml  test-channel-sender-compose.yml  test-docker-file-docker-compose.yml  test-docker-file-docker-compose2.yml  ui-services-docker-compose.yml  webhook-docker-compose.yml
channel_sender/: Cargo.toml  Dockerfile  Dockerfile-old-having-problems  README.md  account_id  mock_data.json  mock_data_full.json  mock_data_original.json
channel_sender/src/: css_interface.rs  email.rs  main-does-not-work.rs  main-save.rs  main-saved.rs  main.rs  pdf.rs  sms.rs  template.rs  whatsapp.rs
channel_sender/templates/: send_grid_example_1.html  temp_10_lang_1_email.html  temp_10_lang_1_pdf.html  temp_10_lang_1_sms.html  temp_1_lang_2_email.html  temp_1_lang_2_pdf.html  temp_1_lang_2_sms.html  temp_3_lang_2_sms.html  temp_4_lang_2_email.html  template1.css  template1.html.bak  template2.html.bak
channel_sender/test-data/: mock_data.json  mock_data_real_people.json
dc-router/: Cargo.toml  Dockerfile
diesel-example/: Cargo.toml  Dockerfile
event-store/: .env  Cargo.toml  Dockerfile  Dockerfile-WORKING  ORIGINAL-Dockerfile
event-store/migrations/2020-02-26-185149_create_event_trans/: up.sql
event-store/migrations/2020-03-01-173026_create_account/: up.sql
event-store/migrations/2020-03-01-175434_create_event/: down.sql  up.sql
event-store/migrations/2020-03-06-173026_create_account/: up.sql
event-store/src/: actions.rs  main.rs  models.rs  schema.rs
event_store/: Cargo.toml
makepdf/: Cargo.toml
makepdf/src/: main.rs
mockaroo-data/: events-email.sql  events-telephone.sql
seektable/: docker-compose.pivotdataservice.env  docker-compose.seektable.env  (+1 more)
test-serde/: Cargo.toml  Dockerfile  mock_data.json
test-serde/src/: main copy 2.rs  main copy.rs  main.rs
test_channel_sender/: Cargo.toml  Dockerfile
test_channel_sender/src/: main.rs
ui-services/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
ui-services/migrations/2020-03-15-205055_create_categories/: down.sql  up.sql
ui-services/migrations/2020-03-15-231430_create_languages/: up.sql
ui-services/migrations/2020-03-15-231435_create_channels/: up.sql
ui-services/migrations/2020-03-15-234957_create_correspondences/: up.sql
ui-services/migrations/2020-03-16-155929_create_category_mappings/: down.sql  up.sql
ui-services/migrations/2020-03-26-153154_create_channel_configs/: up.sql
ui-services/migrations/2020-04-10-191948_client_preferences/: up.sql
ui-services/migrations/2020-04-16-213642_create_dummy_client_prefs/: down.sql
ui-services/sql/: populate.sql  schema.sql
ui-services/sql/category/: delete_category.sql  get_category.sql  insert_category.sql  update_category.sql
ui-services/sql/category_mapping/: delete_category_mapping.sql  get_category_mapping.sql  get_category_mapping_mapped.sql  get_category_mapping_unmapped.sql  insert_category_mapping.sql  update_category_mapping.sql
ui-services/sql/channel/: delete_channel.sql  get_channel.sql  get_channel_by_name.sql  insert_channel.sql  update_channel.sql
ui-services/sql/channel_config/: delete_channel_config.sql  get_channel_config.sql  insert_channel_config.sql  insert_channel_config_from_new_channel.sql
ui-services/sql/client_pref_channel_config/: EDIT-update_channel_config.sql  get_client_pref_channel_config.sql  insert_channel_config.sql  insert_cp_channel_config_from_new_channel.sql  update_channel_config.sql
ui-services/sql/client_preference/: EDIT-get_client_preference_mapped.sql  create_temp_table.sql  delete_client_preference.sql  get_client_preference_mapped.sql  insert_client_preference.sql  update_client_preference.sql
ui-services/sql/correspondence/: delete_correspondence.sql  get_correspondence.sql  insert_correspondence.sql  update_correspondence.sql
ui-services/sql/data/: category.csv  category_mapping.csv  channel.csv  channel_config.csv  client_pref_channel_config.csv  client_preference.csv  correspondence.csv  language.csv
ui-services/sql/language/: delete_language.sql  get_language.sql  insert_language.sql  update_language.sql
ui-services/src/: actions.rs  app_errors.rs  category_actions.rs  category_mapping_actions.rs  channel_actions.rs  channel_config_actions.rs  client_preference_actions.rs  config.rs  corr_actions.rs  db.rs  handlers.rs  language_actions.rs  main.rs  models.rs  schema.rs  template_actions.rs
ui-services/src/db/: category.rs  category_mapping.rs  channel.rs  channel_config.rs  client_pref_channel_config.rs  client_preference.rs  correspondence.rs  language.rs
ui-services/src/handlers/: category.rs  category_mapping.rs  channel.rs  channel_config.rs  client_preference.rs  correspondence.rs  language.rs  template_file.rs
ui-services/template-temp/: temp_5_lang_1_email.html
ui-services/templates/: template_id_2.html
(+59 files in other folders)
