[package]
name = "channel_sender"
version = "0.1.0"
authors = ["DESKTOP-CM4DN2T\\joncatlin <jonc@destini.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
reqwest = "0.10.2"
tokio = { version = "0.2.0", default-features = false, features = ["macros"] }
