[package]
name = "event-store"
version = "0.1.0"
authors = ["DESKTOP-CM4DN2T\\joncatlin <jonc@destini.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.2"
json = "0.12.1"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
rdkafka = { version = "0.23", features = ["cmake-build"] }
futures = "0.3.0"
tokio = { version = "0.2", features = ["blocking", "macros", "rt-core", "time"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"