[package]
name = "test-serde"
version = "0.1.0"
authors = ["joncatlin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.10", features = ["blocking", "json"] }
futures = "0.3.1"
hyper = "0.13.4"
tokio = { version = "0.2.0", default-features = false, features = ["macros"] }
lazy_static = "1.4.0"
rand = "0.7.3"
