[package]
name = "test_channel_sender"
version = "0.1.0"
authors = ["joncatlin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
rdkafka = { version = "0.23", features = ["cmake-build"] }
tokio = { version = "0.2.0", default-features = false, features = ["macros"] }
futures = "0.3.1"