[package]
name = "ui-services"
version = "1.0.0"
authors = ["DESKTOP-CM4DN2T\\joncatlin <jonc@destini.com>"]
edition = "2018"

[[bin]]
name = "ui-services"
path = "src/main.rs"


[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
bytes = "0.5"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
