[package]
name = "ui-services"
version = "1.0.0"
authors = ["DESKTOP-CM4DN2T\\joncatlin <jonc@destini.com>"]
edition = "2018"

[[bin]]
name = "ui-services"
path = "src/main.rs"


[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.10"
actix-rt = "1.0.0"
actix-web = "2.0.0"
bytes = "0.5"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
socket2 = "0.3.11"
bytestring = "0.1.4"
h2 = "0.2.3"
async-trait = "0.1.26"
proc-macro-hack = "0.5.14"
derive_more = "0.99.3"
proc-macro2 = "1.0.9"
serde_json = "1.0.48"
