[package]
name = "ui-services"
version = "1.0.0"
authors = ["DESKTOP-CM4DN2T\\joncatlin <jonc@destini.com>"]
edition = "2018"

[[bin]]
name = "ui-services"
path = "src/main.rs"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-multipart = "0.2.0"
actix-files = "0.2.1"
futures = "0.3.1"
log = "0.4.8"
env_logger = "0.7.1"

config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"

# Might not need this next dep
postgres-derive = "0.4.0"
postgres-types = "0.1.1"